      has always been the intention.

      \item The \code{contrasts} setter \code{`contrasts<-`} gets explicit
      default \code{how.many = NULL} rather than just using
      \code{missing(how.many)}.

      \item \code{grid.pretty()} got new optional argument \code{n = 5}.

      \item New \code{.pretty()} with option \code{bounds} as technical
      utility version of \code{pretty()}.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Facilities for accessing \samp{ftp://} sites are no longer
      tested (except \emph{pro tem} for \code{curlGetHeaders()}) as modern
      browsers have removed support.
      %% Chrome and Firefox did in early 2021: Safari and Edge never had it.
    }
  }

  \subsection{INSTALLATION ON WINDOWS}{
    \itemize{
      \item \code{libcurl} is now required.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} can optionally report
      files/directories left behind in home, \file{/tmp} (even though
      \env{TMPDIR} is set) and other directories.  See the \dQuote{R
	Internals} manual for details.
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The non-API header \file{R_ext/R-ftp-http.h} is no longer
      provided, as the entry points it covered are now all defunct.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item The (non-default and deprecated) \code{method = "internal"}
      for \code{download.file} and \code{url} no longer supports
      \samp{http://} nor \samp{ftp://} URIs.  (It is used only for
      \samp{file://} URIs.)

      On Windows, \code{download.file(method = "wininet")} no longer
      supports \samp{ftp://} URIs.  (It is no longer the default method,
      which is \code{"libcurl"} and does.)

      On Windows, the deprecated \code{method = "wininet"} now gives a
      warning for \samp{http://} and \samp{https://} URIs for both
      \code{download.file} and \code{url}. (It is no longer the default