@@ -81,21 +81,21 @@ attribute_hidden double R_pretty(double *lo, double *up, int *ndiv, int min_n, d
 
 #define h high_u_fact[0]
 #define h5 high_u_fact[1]
+#define f_min high_u_fact[2]
 
-    double dx, cell, unit, base, U;
-    int k;
+    double // save input boundaries
+        lo_ = *lo,
+        up_ = *up, dx = up_ - lo_, cell, U;
     Rboolean i_small;
-
-    dx = *up - *lo;
     /* cell := "scale"	here */
-    if (dx == 0 && *up == 0)
+    if (dx == 0 && up_ == 0)
     { /*  up == lo == 0	 */
         cell = 1;
         i_small = TRUE;
     }
     else
     {
-        cell = fmax2(fabs(*lo), fabs(*up));
+        cell = fmax2(fabs(lo_), fabs(up_));
         /* U = upper bound on cell/unit */
         U = 1 + ((h5 >= 1.5 * h + .5) ? 1 / (1 + h) : 1.5 / (1 + h5));
         U *= imax2(1, *ndiv) * DBL_EPSILON; // avoid overflow for large ndiv
@@ -104,9 +104,10 @@ attribute_hidden double R_pretty(double *lo, double *up, int *ndiv, int min_n, d
     }
 
 #ifdef DEBUGpr
-    REprintf("pretty(lo=%g,up=%g,ndiv=%d,min_n=%d,shrink=%g,high_u=(%g,%g),eps=%d)"
-             "\n\t => dx=%g; i_small:%d. ==> first cell=%g\n",
-             *lo, *up, *ndiv, min_n, shrink_sml, h, h5, eps_correction, dx, (int)i_small, cell);
+    REprintf("R_pretty(lo=%g,up=%g,ndiv=%d,min_n=%d,shrink=%g,high_u=(%g,%g,%g),eps=%d,bnds=%d)"
+             "\n\t => dx=%g; i_small:%s. ==> first cell=%g\n",
+             lo_, up_, *ndiv, min_n, shrink_sml, h, h5, min_f, eps_correction, return_bounds, dx,
+             i_small ? "TRUE" : "F", cell);
 #endif
 
     /*OLD: cell = FLT_EPSILON+ dx / *ndiv; FLT_EPSILON = 1.192e-07 */
@@ -130,35 +131,43 @@ attribute_hidden double R_pretty(double *lo, double *up, int *ndiv, int min_n, d
         { // up - lo = +Inf (overflow; both are finite)
             if (*ndiv < 2)
             {
-                warning(_("Internal(pretty()): infinite range; *ndiv=%d, should have ndiv >= 2"), *ndiv);
+                warning(_("R_pretty(): infinite range; *ndiv=%d, should have ndiv >= 2"), *ndiv);
             }
             else
             {
-                cell = (*up) / (*ndiv) - (*lo) / (*ndiv);
+                cell = up_ / (*ndiv) - lo_ / (*ndiv);
             }
         }
     }
 
-    if (cell < 2 * DBL_MIN)
-    {
-        warning(_("Internal(pretty()): very small range 'cell'=%g, corrected to %g"), cell, 2 * DBL_MIN);
-        cell = 2 * DBL_MIN;
+// f_min: arg, default = 2^-20, was 20.  till R 4.1.0 (2021-05)
+#define MAX_F 1.25 //		was 10.   "   "   "
+
+    double subsmall = f_min * DBL_MIN;
+    if (subsmall == 0.) // subnormals underflowing to zero (not yet seen!)
+        subsmall = DBL_MIN;
+    if (cell < subsmall)
+    { // possibly subnormal
+        warning(_("R_pretty(): very small range 'cell'=%g, corrected to %g"), cell, subsmall);
+        cell = subsmall;
     }
-    else if (cell > DBL_MAX / 8)
+    else if (cell > DBL_MAX / MAX_F)
     {
-        warning(_("Internal(pretty()): very large range 'cell'=%g, corrected to %g"), cell, DBL_MAX / 8);
-        cell = DBL_MAX / 8.;
+        warning(_("R_pretty(): very large range 'cell'=%g, corrected to %g"), cell, DBL_MAX / MAX_F);
+        cell = DBL_MAX / MAX_F;
     }
+
+#undef MAX_F
 
     /* NB: the power can be negative and this relies on exact
        calculation, which glibc's exp10 does not achieve */
-    base = pow(10.0, floor(log10(cell))); /* base <= cell < 10*base */
+    double base = pow(10.0, floor(log10(cell))); /* base <= cell < 10*base */
 
     /* unit : from { 1,2,5,10 } * base
      *	 such that |u - cell| is small,
      * favoring larger (if h > 1, else smaller)  u  values;
      * favor '5' more than '2'  if h5 > h  (default h5 = .5 + 1.5 h) */
-    unit = base;
+    double unit = base;
     if ((U = 2 * base) - cell < h * (cell - unit))
     {
         unit = U;
@@ -169,25 +178,26 @@ attribute_hidden double R_pretty(double *lo, double *up, int *ndiv, int min_n, d
                 unit = U;
         }
     }
-    /* Result: c := cell,  u := unit,  b := base
-     *	c in [	1,	      (2+ h) /(1+h) ] b ==> u=  b
-     *	c in ( (2+ h)/(1+h),  (5+2h5)/(1+h5)] b ==> u= 2b
-     *	c in ( (5+2h)/(1+h), (10+5h) /(1+h) ] b ==> u= 5b
-     *	c in ((10+5h)/(1+h),	         10 ) b ==> u=10b
+    /* Result (c := cell,  b := base,  u := unit):
+     *	c in [	1,	       (2+ h)/ (1+h) ] b ==> u=  b
+     *	c in ( (2+ h) /(1+h),  (5+2h5)/(1+h5)] b ==> u= 2b
+     *	c in ( (5+2h5)/(1+h5), (10+5h)/(1+h) ] b ==> u= 5b
+     *	c in ((10+5h) /(1+h),	     10      ) b ==> u=10b
      *
      *	===>	2/5 *(2+h)/(1+h)  <=  c/u  <=  (2+h)/(1+h)	*/
 
-    double ns = floor(*lo / unit + rounding_eps), nu = ceil(*up / unit - rounding_eps);
+    double ns = floor(lo_ / unit + rounding_eps), nu = ceil(up_ / unit - rounding_eps);
 #ifdef DEBUGpr
     REprintf("\t => final cell=%g; base=%g unit=%g; (ns,nu) = (%g,%g)\n", cell, base, unit, ns, nu);
 #endif
     if (eps_correction && (eps_correction > 1 || !i_small))
     {
-        if (*lo != 0.)
+        // FIXME?: assumes 0 <= lo <= up  (what if lo <= up < 0 ?)
+        if (lo_ != 0.)
             *lo *= (1 - DBL_EPSILON);
         else
             *lo = -DBL_MIN;
-        if (*up != 0.)
+        if (up_ != 0.)
             *up *= (1 + DBL_EPSILON);
         else
             *up = +DBL_MIN;
@@ -195,33 +205,33 @@ attribute_hidden double R_pretty(double *lo, double *up, int *ndiv, int min_n, d
 
 #ifdef DEBUGpr
     if (ns * unit > *lo + rounding_eps * unit)
-        REprintf("\t ns= %.0f -- while(ns*unit > *lo + e*u) ns--;\n", ns);
+        REprintf("\t ns= %.0f -- while(ns*unit > lo + r_eps * u) ns--;\n", ns);
 #endif
     while (ns * unit > *lo + rounding_eps * unit)
         ns--;
 
 #ifdef DEBUGpr
     if (!R_FINITE(ns * unit))
-        REprintf("\t infinite (ns=%d)*unit=%g  ==> ns++\n", ns, unit);
+        REprintf("\t infinite (ns=%.0f)*(unit=%g)  ==> ns++\n", ns, unit);
 #endif
     while (!R_FINITE(ns * unit))
         ns++;
 
 #ifdef DEBUGpr
     if (nu * unit < *up - rounding_eps * unit)
-        REprintf("\t nu= %.0f -- while(nu*unit < *up - e*u) nu++;\n", nu);
+        REprintf("\t nu= %.0f -- while(nu*unit < up - r_eps * u) nu++;\n", nu);
 #endif
     while (nu * unit < *up - rounding_eps * unit)
         nu++;
 
 #ifdef DEBUGpr
     if (!R_FINITE(nu * unit))
-        REprintf("\t infinite (nu=%d)*unit=%g  ==> nu--\n", nu, unit);
+        REprintf("\t infinite (nu=%.0f)*(unit=%g)  ==> nu--\n", nu, unit);
 #endif
     while (!R_FINITE(nu * unit))
         nu--;
 
-    k = (int)(0.5 + nu - ns);
+    int k = (int)(0.5 + nu - ns);
 #ifdef DEBUGpr
     REprintf(" possibly adjusted  (ns,nu) = (%g,%g) ==> k=%d\n", ns, nu, k);
 #endif
@@ -232,7 +242,15 @@ attribute_hidden double R_pretty(double *lo, double *up, int *ndiv, int min_n, d
         REprintf("\tnu-ns=%.0f-%.0f=%d SMALL -> ensure nu-ns= min_n=%d\n", nu, ns, k, min_n);
 #endif
         k = min_n - k;
-        if (ns >= 0.)
+        if (lo_ == 0. && ns == 0. && up_ != 0.)
+        {
+            nu += k;
+        }
+        else if (up_ == 0. && nu == 0. && lo_ != 0.)
+        {
+            ns -= k;
+        }
+        else if (ns >= 0.)
         {
             nu += k / 2;
             ns -= k / 2 + k % 2; /* ==> nu-ns = old(nu-ns) + min_n -k = min_n */
@@ -250,13 +268,26 @@ attribute_hidden double R_pretty(double *lo, double *up, int *ndiv, int min_n, d
     }
     if (return_bounds)
     { // used in pretty.default(), ensure result covers original range
+#ifdef DEBUGpr
+        if (ns * unit < *lo)
+        {
+            REprintf("lo=%g too large, set to ns*unit\n", *lo);
+            *lo = ns * unit;
+        }
+        if (nu * unit > *up)
+        {
+            REprintf("up=%g too small, set to nu*unit\n", *up);
+            *up = nu * unit;
+        }
+#else
         if (ns * unit < *lo)
             *lo = ns * unit;
         if (nu * unit > *up)
             *up = nu * unit;
+#endif
     }
     else
-    { // used in graphics GEpretty()
+    { // used in graphics GEpretty(), hence grid::grid.pretty()
         *lo = ns;
         *up = nu;
     }
