@@ -13,11 +13,11 @@ pretty(x, \dots)
 
 \method{pretty}{default}(x, n = 5, min.n = n \%/\% 3,  shrink.sml = 0.75,
        high.u.bias = 1.5, u5.bias = .5 + 1.5*high.u.bias,
-       eps.correct = 0, \dots)
+       eps.correct = 0, f.min = 2^-20, \dots)
 
 .pretty(x, n = 5L, min.n = n \%/\% 3,  shrink.sml = 0.75,
        high.u.bias = 1.5, u5.bias = .5 + 1.5*high.u.bias,
-       eps.correct = 0L, bounds = TRUE)
+       eps.correct = 0L, f.min = 2^-20, bounds = TRUE)
 }
 \arguments{
   \item{x}{an object coercible to numeric by \code{\link{as.numeric}}.}
@@ -38,8 +38,14 @@ pretty(x, \dots)
   \item{eps.correct}{integer code, one of \{0,1,2\}. If non-0, an
     \emph{epsilon correction} is made at the boundaries such that
     the result boundaries will be outside \code{range(x)}; in the
-    \emph{small} case, the correction is only done if \code{eps.correct
-      >= 2}.}
+    \emph{small} case, the correction is only done if \code{eps.correct >= 2}.}
+  \item{f.min}{positive factor multiplied by \code{\link{.Machine}$double.xmin}
+    to get the smallest \dQuote{acceptable} \code{cell} \eqn{c_m} which
+    determines the \code{unit} of the algorithm.  Smaller \code{cell}
+    values are set to \eqn{c_n} signalling a \code{\link{warning}} about
+    being \dQuote{corrected}.
+    New from \R 4.2.0, where previously, \code{f.min = 20} was implicitly
+    hard coded in the algorithm.}
   \item{bounds}{a \code{\link{logical}} indicating if the resulting vector
     should \emph{cover} the full \code{range(x)}, i.e., strictly include
     the bounds of \code{x}.  New from \R 4.2.0, allowing \code{bound=FALSE}
@@ -70,14 +76,19 @@ pretty(x, \dots)
 
   \dots\dots\dots
 }
-\value{\code{pretty()} returns a numeric vector with \dQuote{pretty}
-  entries (in decimal notation).
+\value{\code{pretty()} returns an numeric vector of \emph{approximately}
+  \code{n} increasing numbers which are \dQuote{pretty} in decimal notation.
+  (in extreme range cases, the numbers can no longer be \dQuote{pretty}
+  given the other constraints; e.g., for \code{pretty(..)} %  <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< FIXME
 
   For ease of investigating the underlying C \code{R_pretty()}
-  function, \code{.pretty()} returns a \code{\link{list}} with entries
-  \code{ns}, \code{nu}, \code{n}, and (\dQuote{pretty}) \code{unit}, where
-  \code{n*} are integer valued (but only \code{n} is of class
-  \code{\link{integer}}).
+  function, \code{.pretty()} returns a named \code{\link{list}}.  By
+  default, when \code{bounds=TRUE}, the entries are \code{l}, \code{u},
+  and \code{n}, whereas for \code{bounds=FALSE}, they are
+  \code{ns}, \code{nu}, \code{n}, and (a \dQuote{pretty}) \code{unit}
+  where the \code{n*}'s are integer valued (but only \code{n} is of class
+  \code{\link{integer}}).  Programmers may use this to create pretty
+  sequence (iterator) objects.
 }
 \seealso{
   \code{\link{axTicks}} for the computation of pretty axis tick
