@@ -25,7 +25,7 @@
 #include <Internal.h>
 #include <float.h> /* for DBL_MAX */
 #include <R_ext/GraphicsEngine.h>
-#include <R_ext/Applic.h> /* pretty() */
+#include <R_ext/Applic.h> /* R_pretty() */
 #include <Rmath.h>
 
 #include <rlocale.h>
@@ -2676,14 +2676,19 @@ void GEPretty(double *lo, double *up, int *ndiv)
 
     // For *finite* boundaries, now allow (*up - *lo) = +/- inf  as R_pretty() now does
     double ns = *lo, nu = *up;
-#ifdef DEBUG_PLOT
+#ifdef DEBUG_axis
     double x1 = ns, x2 = nu;
+    int nd = *ndiv;
 #endif
-    double unit, high_u_fact[2] = {.8, 1.7};
+    double unit, high_u_fact[3] = {.8, 1.7, 1.125};
+    // =   (h, h5 , f_min) = (high.u.bias, u5.bias, f_min)
     // -> ../appl/pretty.c
     unit = R_pretty(&ns, &nu, ndiv, /* min_n = */ 1,
                     /* shrink_sml = */ 0.25, high_u_fact, 2, /* do eps_correction in any case */
                     0 /* return (ns,nu) in  (lo,up) */);
+#ifdef DEBUG_axis
+    REprintf(" R_pretty() -> new (ns=%g, nu=%g, ndiv=%d)\n", ns, nu, *ndiv);
+#endif
     // The following is ugly since it kind of happens already in R_pretty(..):
 #define rounding_eps 1e-10 /* <- compatible to seq*(); was 1e-7 till 2017-08-14 */
     if (nu >= ns + 1)
@@ -2713,11 +2718,15 @@ void GEPretty(double *lo, double *up, int *ndiv)
         *ndiv = nu - ns;
 #endif
 
-#ifdef DEBUG_PLOT
+#ifdef DEBUG_axis
+    REprintf(" .. GEPr final (lo=%g, up=%g, ndiv=%d)\n", *lo, *up, *ndiv);
+#endif
+
+#ifdef DEBUG_axis
     if (*lo < x1)
-        warning(_(" .. GEPretty(.): new *lo = %g < %g = x1"), *lo, x1);
+        warning(_(" new *lo = %g < %g = x1"), *lo, x1);
     if (*up > x2)
-        warning(_(" .. GEPretty(.): new *up = %g > %g = x2"), *up, x2);
+        warning(_(" new *up = %g > %g = x2"), *up, x2);
 #endif
 }
 
